--- a/modulo1/css-bugfixes/exercicio-bugfixes/index.css
+++ b/modulo1/css-bugfixes/exercicio-bugfixes/index.css
@@ -3,7 +3,7 @@
   *  ESTILOS GERAIS 
   *
   **/
-
+  /* **A ordem das margens é: top, right, bottom, left** */
 * {
     margin: 0;
     padding: 0;
@@ -51,7 +51,9 @@ div img {
 }
 
 .container {
-    height: 500px;
+    
+    height: 120px;
+    padding: 8px 0px 0px 0px;
     text-align: center;
 }
 
