--- a/modulo1/css-bugfixes/exercicio-bugfixes/index.css
+++ b/modulo1/css-bugfixes/exercicio-bugfixes/index.css
@@ -7,6 +7,7 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Noto Sans', sans-serif;
 }
 
 h2 {
@@ -26,6 +27,8 @@ button:focus {
 }
 
 img {
+    max-width: 100%;
+    height: 100px;
     width: 100px;
 }
 
@@ -52,9 +55,10 @@ div img {
 
 .container {
     
-    height: 120px;
-    padding: 8px 0px 0px 0px;
+    height: 48vh;
+    padding: 8vh 0px 0px 0px;
     text-align: center;
+    margin: 0;
 }
 
 .icone {
