--- a/modulo1/projeto-portfolio/estilização.css
+++ b/modulo1/projeto-portfolio/estilização.css
@@ -121,3 +121,15 @@ margin: 0px 0px 0px 0px;
     width: 300px;
     height: 100px;
   }
+ .footer{
+    position: relative;
+    bottom: 0;
+  }
+  .footer{
+    padding: 20px;
+    border: 2px black solid;
+    width: 100%;
+    background-color: rgb(21, 102, 113);
+    text-align: center;
+    margin: 50px 0px 0px 0px;
+  }
