--- a/modulo1/projeto-portfolio/estilização.css
+++ b/modulo1/projeto-portfolio/estilização.css
@@ -20,19 +20,35 @@
     margin-left: auto;
     margin-right: auto 
 }
+.Pagina1{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100vh;
+    padding-bottom: 10px;
+}
 
 .sobre-mim {
     color: white;
+    display: flex;
     text-align: center;
     background-color: rgb(21, 102, 113);
-    margin: 28vw 30vw 0px 30vw;
-    padding: 10px 10px 10px 10px;
+    margin: 0vw 30vw 0px 30vw;
+    /* padding: 10px 10px 10px 10px; */
     border-radius: 200px 200px 200px 200px;
+    width: 200px;
+    height: 50px;
+    justify-content: center;
+    flex-direction: column;
 }
-
+.sobre-mim-container{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
 .github{
     /* margin: 10px 0px 0px 0px; */
-    padding: 0px 0vw 0px 37vw;
+    /* padding: 0px 0vw 0px 37vw; */
     margin: 0px 0px 0px 0px;
     height: 25px;
     width: 25px;
@@ -55,18 +71,31 @@
 .redes-sociais-txt{
     margin: 0px 0px 0px 420px;
 }
+.conteiner-sobre-mim{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
+}
 .txt-sobre-mim{
-background-color: rgb(21, 102, 113);
+    background-color: rgba(21, 102, 113);
 color: rgb(255, 255, 255);
 border-radius: 20px 20px 8px 8px;
-padding: 35px 50px 40px 50px;
-margin: 15px 0px 0px 0px;
+padding: 20px 10px 20px 10px;
+/* margin: 15px 0px 0px 0px; */
 text-align: center;
+width: 80%;
+height: 120px;
 }
 .projeto{
 text-align: center;
 padding: 50px 0px 50px 0px;
 margin: 0px 0px 0px 0px;
+}
+.conteiner-table{
+ display: flex;
+ justify-content: center;
 }
 .tabela-projeto{
     margin: 0px 0px 00px 0px;
@@ -106,10 +135,24 @@ margin: 0px 0px 0px 0px;
     border-radius: 200px 200px 200px 200px;
 }
 .tabela-hab{
-    margin: 20px 0px 0px 32vw;
-    width:fit-content;
+    margin: 10px 0px 0px 32px;
+    width:470px;
     /* background-color: rgb(21, 102, 113); */
     text-align: left;
+    /* border-radius: 20px 20px 8px 8px; */
+}
+.conteiner-tabela{
+    display: flex;
+    justify-content: center;
+    padding-top: 20px;
+}
+.tabela-cor{
+    margin: 0px 0px 0px 0px;
+    padding-bottom: 10px;
+    width:fit-content;
+    background-color: rgb(21, 102, 113);
+    text-align: left;
+    border-radius: 10px 10px 10px 10px;
 }
 .forms{
     text-align: center;
@@ -121,15 +164,39 @@ margin: 0px 0px 0px 0px;
     width: 300px;
     height: 100px;
   }
- .footer{
-    position: relative;
-    bottom: 0;
-  }
+
   .footer{
-    padding: 20px;
-    border: 2px black solid;
+    /* padding: 20px; */
+    /* border: 2px black solid; */
     width: 100%;
     background-color: rgb(21, 102, 113);
     text-align: center;
     margin: 50px 0px 0px 0px;
   }
+  .footer-borda{
+    /* padding: 20px; */
+    border: 2px black solid;
+    /* width: 100%;
+    background-color: rgb(21, 102, 113);
+    text-align: center;
+    margin: 50px 0px 0px 0px; */
+  }
+  .Pagina2{
+    /* display: flex;
+    flex-direction: column;
+    justify-content: space-between; */
+    /* height: 800px; */
+}
+.Links{
+    display: block;
+    margin-left: auto;
+    margin-right: auto; 
+}
+#contato{
+    width: 500px;
+    height: 20px;
+}
+.butao{
+    height:24px;
+}
+
