--- a/modulo1/flex-grid/style.css
+++ b/modulo1/flex-grid/style.css
@@ -3,11 +3,11 @@
     padding: 0;
     font-family: 'Noto Sans', sans-serif;
 }
-.Pagina{
-    display: flex;
-    flex-direction: column;
+body{
     height: 100%;
-    
+}
+.Pagina{
+    height: 100%;
 }
 .img-bolin{
     height:20px;
@@ -15,11 +15,13 @@
 }
 .cabeçalho{
     width: 100%;
+    display: flex;
+    justify-content: space-between;
+    background-color: mediumvioletred ;
 }
 .cabeçalho1{
-    background-color: mediumvioletred ;
     display: flex; 
-    justify-content: space-between;
+    /* justify-content: space-between; */
     align-items: center;
     /* border: 2px black solid;  */
     /* flex-direction: row;    */
@@ -31,55 +33,55 @@
 /* padding: 0px 10px 0px 0px; */
 margin: 10px 10px 10px 0px;
 }
-/* header{ */
-    /* background-color: mediumvioletred ;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border: 2px black solid; 
-    flex-direction: row;   
-    height: 50px; */
-/* } */
-.confeitaria{
-/* align-items: flex-start; */
-/* padding: 0px 1100px 0px 0px; */
-/* justify-content: flex-end; */
-}
+
 .Opçoes{
-    /* display: flex; */
-    /* flex-direction: column; */
     background-color: #f2d0e0;
-    /* flex: 0 1 auto; */
-    /* border-right: 10px solid black; */
+    height: 100%;
+    width: 150px;
 }
 .Conteiner-Opçoes{
+    width: 300px;
     display: flex;
-    flex-direction: column;
-    /* height: 100vh; */
+    justify-content: space-between;
 }
 .Seta{
     width: 15px;
 }
 .Icone{
 width: 15px;
-/* height: 15px; */
 }
 .foto-bolo{
     width:200px ;
 
 }
 .conteiner-Foto{
-    /* border: 1px solid black; */
-    width: 200px;
 display: flex;
-flex-direction: row;
-align-items: center;
-flex-wrap: nowrap;
-justify-content: space-between;
 flex-grow: 3;
+flex-wrap: wrap;
+justify-content: space-between;
+gap: 8px;
+height: 80%;
+height: 100%;
 }
+
 footer{
-    display: flex;
-    flex-basis: 60px;
+    position: absolute;
+    width: 100%;
+bottom: 0;
     background-color: bisque;
+}
+.conteiner2{
+display: flex;
+width: 100%;
+height: 100%;
+}
+.conteiner-produtos{
+display: flex;
+}
+.bolo-unidade{
+    display: flex;
+    flex-direction: column;
+    width: 310px;
+    border: 1px solid black;
+    width: 200px;
 }
