--- a/modulo1/css-labetube/style.css
+++ b/modulo1/css-labetube/style.css
@@ -21,18 +21,17 @@
     padding: 16px;
     width: 100%;
 }
-::placeholder{
+
+::placeholder {
     padding-left: 20px;
 }
+
 #Buscar {
     display: flex;
     height: 30px;
     margin: 10px 10px 10px 10px;
 }
-.conteiner-midias{
-
-}
-.midias{
+.midias {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 2fr 2fr;
@@ -40,16 +39,46 @@
     padding: 10px;
     /* width: 100%; */
 }
-.video { 
-width: 100%;
-padding-bottom: 15px;
+
+.video {
+    width: 100%;
+    padding-bottom: 15px;
 }
-.videotxt { 
+
+.videotxt {
     border: 1px solid green;
     padding-bottom: 10px;
-    margin: 10px ;
-text-align: start;
+    /* margin: 10px ; */
+    text-align: start;
 }
-p{
+
+p {
     margin-left: 10px;
+}
+
+footer {
+    background-color: grey;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+}
+.video1titulo{
+padding: 10px;
+text-align: center;
+}
+.videocentro{
+    display: flex;
+    justify-content: center;
+    padding-top: 50px;
+}
+.videocentro2{
+    display: flex;
+    justify-content: center;
+    padding-top: 50px;
+    width: 100%;
+    height: 400px;
 }
