--- a/modulo1/css-labetube/style.css
+++ b/modulo1/css-labetube/style.css
@@ -82,3 +82,54 @@ text-align: center;
     width: 100%;
     height: 400px;
 }
+/* celular */
+@media (min-width : 320px) and (max-width : 480px) {
+    .midias{
+display: grid;
+grid-template-columns: 1fr;
+grid-template-rows: 1fr;
+    }
+    footer{
+        position: static;
+        width: 100%;
+        bottom: 0;
+    }
+    .videotxt{
+        text-align: center;
+    }
+}
+/* tablets */
+@media screen and (min-width : 481px) and (max-width : 800px) {
+    .midias{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr;
+            }
+            footer{
+                position: static;
+                width: 100%;
+                bottom: 0;
+            }
+            .videotxt{
+                text-align: center;
+            }
+}
+/* Media 1 */
+@media (min-width : 481px) and (max-width : 800px) {
+    .videocentro{
+        display: grid;
+grid-template-columns: 1fr;
+grid-template-rows: 1fr;
+display: flex;
+justify-content: center;
+padding-top: 50px;
+    }
+    footer{
+        position: absolute;
+        width: 100%;
+        bottom: 0;
+    }
+    video{
+        width: 70vh;
+    }
+}
